discussion/kv_engine/176084/176084_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Catch any exceptions thrown in sasl init

And log the reason why it failed before terminating the process.
An exception may be thrown if ns_server provides an invalid file
format, which may happen during development of new features which
touch the password database.

Change-Id: If55c96eec7f63ffb07f08bf154c174212457b142

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-13 07:15:24.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-13 07:29:39.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46773/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/memcached.cc(709): error C2001: newline in constant ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46773/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18077/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:709:9: error: unterminated function-like macro invocation [clang-diagnostic-error]
        FATAL_ERROR(EXIT_FAILURE, "Failed to initialize SASL: {}", e.what()");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/log_macros.h:26:9: note: macro "FATAL_ERROR" defined here
#define FATAL_ERROR(EXIT_STATUS, ...)             \
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:1171:2: error: expected "}" [clang-diagnostic-error]
}
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:708:33: note: to match this "{"
    } catch (std::exception& e) {
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18077/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/memcached.cc:709:9:
error: unterminated function-like macro invocation [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18077/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39313/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/memcached.cc:709:9:
error: unterminated function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7736/ : FAILURE

Compile error at [2022-06-13T07:21:27.772Z] kv_engine/daemon/CMakeFiles/memcached_daemon.dir/Unity/unity_3_cxx.cxx:11:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7736/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19128/ : FAILURE

Compile error at [2022-06-13T07:27:17.421Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/build/kv_engine/daemon/CMakeFiles/memcached_daemon.dir/Unity/unity_3_cxx.cxx:11:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19128/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19924/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19924/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20919/ : FAILURE

Compile error at [2022-06-13T07:19:34.021Z] kv_engine/daemon/CMakeFiles/memcached_daemon.dir/Unity/unity_3_cxx.cxx:11:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20919/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20274/ : FAILURE

Compile error at [2022-06-13T07:20:07.692Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/memcached.cc:709:9:
error: ?FATAL_ERROR? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20274/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28312/ : FAILURE

Compile error at [2022-06-13T07:19:01.748Z] kv_engine/daemon/CMakeFiles/memcached_daemon.dir/Unity/unity_3_cxx.cxx:11:2:
error: embedding a #include directive within macro arguments is not supported
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7839/ : FAILURE

Compile error at [2022-06-13T07:25:46.734Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/memcached.cc:709:9:
error: ?FATAL_ERROR? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7839/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17137/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
